; ModuleID = '/home/carl/AnghaBench/git/extr_repository.c_read_and_verify_repository_format.c'
source_filename = "/home/carl/AnghaBench/git/extr_repository.c_read_and_verify_repository_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.repository_format = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [10 x i8] c"%s/config\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.repository_format*, i8*)* @read_and_verify_repository_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_and_verify_repository_format(%struct.repository_format* %0, i8* %1) #0 {
  %3 = alloca %struct.repository_format*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.strbuf, align 4
  store %struct.repository_format* %0, %struct.repository_format** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 0, i32* %5, align 4
  %7 = bitcast %struct.strbuf* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @strbuf_addf(%struct.strbuf* %6, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %8)
  %10 = load %struct.repository_format*, %struct.repository_format** %3, align 8
  %11 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %6, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @read_repository_format(%struct.repository_format* %10, i32 %12)
  %14 = call i32 @strbuf_reset(%struct.strbuf* %6)
  %15 = load %struct.repository_format*, %struct.repository_format** %3, align 8
  %16 = call i64 @verify_repository_format(%struct.repository_format* %15, %struct.strbuf* %6)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %2
  %19 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %6, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @warning(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  store i32 -1, i32* %5, align 4
  br label %22

22:                                               ; preds = %18, %2
  %23 = call i32 @strbuf_release(%struct.strbuf* %6)
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i8*) #2

declare dso_local i32 @read_repository_format(%struct.repository_format*, i32) #2

declare dso_local i32 @strbuf_reset(%struct.strbuf*) #2

declare dso_local i64 @verify_repository_format(%struct.repository_format*, %struct.strbuf*) #2

declare dso_local i32 @warning(i8*, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
